--- a/src/components/btnoutline/outlinebtn.css
+++ b/src/components/btnoutline/outlinebtn.css
@@ -1,6 +1,6 @@
 .outline-btn {
-    height: 60px;
-   padding: 0px 30px;
+    /* height: 60px; */
+   padding: 15px 30px;
    border-radius: 20px;
    background: transparent;
    border: 1px solid #A259FF;
