--- a/src/components/BrowseCards/BrowseCards.css
+++ b/src/components/BrowseCards/BrowseCards.css
@@ -1,4 +1,68 @@
-.card{
+/* .card{
     background-color: #3B3B3B !important;
     border-radius: 20px !important;
+    position: relative;
+    overflow: hidden;
 }
+.brush{
+    transition: filter 0.3s ease;
+}
+
+.img-div{
+  /* background-color: rgb(219, 219, 219) !important;
+  width: 150px ;
+  height: 100px;
+  position: absolute;
+  bottom:  9rem;
+  left: 5rem; */
+  /* position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;  */
+/* } */ 
+
+
+.card {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .card-image {
+    width: 100%;
+    height: 100%;
+    transition: filter 0.3s ease;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    pointer-events: none; /* Allows hovering over the overlay without blocking mouse events. */
+  }
+  
+  .hover-image {
+    width: 40%; /* Adjust the size of the hover image as needed. */
+    height: auto;
+  }
+  
+  .card:hover .card-image {
+    filter: blur(5px); /* Apply the blur effect when hovering over the card. */
+  }
+  
+  .card:hover .overlay {
+    opacity: 1; /* Show the overlay on hover to display the hover image. */
+  }
